--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,11 @@ linux/
 ehthumbs.db
 Thumbs.db
 
+# APK files
+*.apk
+
 # Keep important files
 !assets/
 !lib/
 !pubspec.yaml
 !README.md
-!Expensify-v1.0.apk
